# python-flutterwave

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  build_script.sh  pyproject.toml  requirements.txt  setup.cfg
.github/: FUNDING.yml
.github/workflows/: build.yml  release.yml  test.yml
docs/: conf.py  index.rst  modules.rst  python_flutterwave.charge.rst  python_flutterwave.rst  python_flutterwave.tokenization.rst
python_flutterwave/: __init__.py  decorators.py  exceptions.py  objects.py  payment.py
python_flutterwave/charge/: __init__.py  bank.py  card.py  mobile.py  validation.py
python_flutterwave/tests/: test_initiate_payment.py  test_initiate_ussd_payment.py  test_trigger_mpesa_payment.py  test_verify_bank_account_details.py  test_verify_card_details.py
python_flutterwave/tokenization/: __init__.py  tokenized_charge.py
source/: conf.py  index.rst
