[metadata]
name = python-flutterwave
version = 1.2.2
author = William Otieno
author_email = jimmywilliamotieno@gmail.com
description = Python Wrapper for interacting with the Flutterwave Payments API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/WilliamOtieno/python-flutterwave
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
install_requires = requests;
python_requires = >=3.8
include_package_data  = True
